<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--App Name-->
    <string name="app_name">Eminent Domain</string>

    <!--Prompt-->
    <string name="number_of_players">Number of Players:</string>

    <!--Buttons-->
    <string name="start">Start</string>
    <string name="ok">OK</string>

    <!--Card types-->
    <string name="survey">Survey</string>
    <string name="warfare">Warfare</string>
    <string name="colonize">Colonize</string>
    <string name="produce_trade">Produce/Trade</string>
    <string name="research">Research</string>
    <string name="produce">Produce</string>
    <string name="trade">Trade</string>

    <!--Dummy strings-->
    <string name="none">None</string>
    <string name="two">2</string>

    <!--Content Description-->
    <string name="deck">Deck</string>
    <string name="discard">Discard</string>
    <string name="action_phase">Action Phase</string>
    <string name="card_name">Card Name</string>
    <string name="x0">x0</string>
    <string name="dummyvp">0VP</string>
    <string name="planet_image">Planet Image</string>
    <string name="twenty">20</string>

</resources>
