<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:gravity="bottom"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/okay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/hand"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/discardPile"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:contentDescription="@string/discard"
            android:scaleType="fitXY"
            android:src="@drawable/blank_card" />

        <ImageView
            android:id="@+id/deck"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:contentDescription="@string/deck"
            android:scaleType="fitXY"
            android:src="@drawable/card_back" />
    </LinearLayout>

</LinearLayout>